@@ -1,10 +1,11 @@
-# last modified 2020-03-10 by J. Fox
+# last modified 2020-05-06 by J. Fox
 
 # additions for car >= 3.0-0, started 2016-12-27
 
 export(Import, Export, Predict, bcnPowerAxis)
 import("rio")
 export(Confint, S, carPalette, poTest, brief)
+export(strings2factors)
 S3method(Confint, lm)
 S3method(Confint, glm)
 S3method(Confint, multinom)
@@ -59,6 +60,7 @@ S3method(infIndexPlot, influence.merMod)
 S3method(infIndexPlot, influence.lme)
 S3method(whichNames, data.frame)
 S3method(whichNames, default)
+S3method(strings2factors, data.frame)
 
 import("carData")
 importFrom("abind", "abind")
